updated homepage layout

--- a/index.html
+++ b/index.html
@@ -21,59 +21,33 @@
     </nav>
 
     <main>
-        <div class="main-content">
-            <div class="hero-container">
-                <div class="hero-text">
-                    <h1>Welcoming spaces for young LGBTQIA community to play sports.</h1>
-                </div>
-
-                <div class="hero-button">
-
-                    <button>
-                        <a href="nearyou.html">
-                            Find Sports Club
-                        </a>
-                    </button>
-                </div>
+        <section id="hero-container">
+            <div id="hero-text">
+                <h1>Our mission is to make sports more accessible to youth from the LGBTQ+ community.</h1>
+                <a id="hero-button" href="nearyou.html">Find Sports Clubs</a>
+            </div>
+            
+            <div id="hero-image">
+                <img class="big-image" src="img/lgbt2.jpg" alt="">
+            </div>
+        </section>
 
 
-
-
-
-                <div class="hero-image">
-                    <img src="img/basketball.png" alt="" />
-                </div>
+        <section id="container-two">
+            <div>
+                <img class="big-image" src="img/lgbt1.jpg" alt="">
             </div>
 
-
-            <div class="container-two">
-                <div class="links">
-                    <ul>
-                        <li> OUR MISSION</a></li><br>
-                        <li> RESOURCES AND SUPPORT</a></li><br>
-                        <li> SPORTING INSPIRATION</a></li><br>
-                        <li> GET IN TOUCH </li>
-                    </ul>
-                </div>
-
-                <div class="arrow-button">
-
-                    <a id="button-one" href="#"> <img src="img/arrow.png"> </a>
-                    <a id="button-two" href="#"> <img src="img/arrow.png"> </a>
-                    <a id="button-three" href="#"> <img src="img/arrow.png"> </a>
-                    <a id="button-four" href="#"> <img src="img/arrow.png"> </a>
-
-
-
-                </div>
-
-                <div class="image-two">
-                    <img src="img/football.png" alt="" />
-
-                </div>
+            <div>
+                <ul id="links">
+                    <li><a class="home-link" href="index.html">Our Mission<span class="iconify" data-icon="bi:arrow-right-circle" style="color: white;"></span></a></li>
+                    <li><a class="home-link" href="rolemodels.html">Sporting Inspirations<span class="iconify" data-icon="bi:arrow-right-circle" style="color: white;"></span></a></li>
+                    <li><a class="home-link" href="resources.html">Resources and Support<span class="iconify" data-icon="bi:arrow-right-circle" style="color: white;"></span></a></li>
+                    <li><a class="home-link" href="contact.html">Get in touch<span class="iconify" data-icon="bi:arrow-right-circle" style="color: white;"></span></a></li>
+                </ul>
             </div>
+        </section>
 
-        </div>
     </main>
 
 </body>
