--- a/rolemodels.html
+++ b/rolemodels.html
@@ -21,7 +21,7 @@
   <main>
     <h1>Role Model of the Week</h1>
     <h2>Tom Daley</h2>
-    <img src="https://pbs.twimg.com/profile_images/624538070059253760/05sGQxGK.jpg" alt="Tom Daley" width=200px>
+    <center><img src="https://pbs.twimg.com/profile_images/624538070059253760/05sGQxGK.jpg" alt="Tom Daley" width=200px></center>
     <p id="text">Thomas Robert Daley OBE (born 21 May 1994) is a British diver and television personality. Specialising
       in
       multiple events, he is an Olympic gold medallist in the men's
